--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Alt+Escape
+name: alt+esc
 
 # Short bio or description (displayed in the header)
-description: S'échapper avec des alternatives au quotidien
+description: Des alternatives au quotidien
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
