--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -4,8 +4,11 @@
 vaisselle:
   name: vaisselle
 
-animaux:
-  name: animaux
+vinaigre:
+  name: vinaigre
 
 bicarbonate-de-soude:
   name: bicarbonate-de-soude
+
+animaux:
+  name: animaux
