--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ gems:
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-seo-tag # https://help.github.com/articles/search-engine-optimization-for-github-pages/
   - jemoji # https://help.github.com/articles/emoji-on-github-pages/
-  - jekyll-admin
+  - jekyll-admin # Create a GUI for content management at {{ base.url }}/admin
 
 # Exclude these files from your production _site
 exclude:
