--- a/_config.yml
+++ b/_config.yml
@@ -91,4 +91,4 @@ exclude:
 # To be able to access the server with other devices (uncomment "host:…")
 # Simply go to <server-device-IP-adress>:4000 on any device browser
 # !this allow anyone on the network to access the server because it binds server to all available IPs!
-host: 0.0.0.0
+# host: 0.0.0.0
